--- a/books/index.html
+++ b/books/index.html
@@ -16,7 +16,7 @@
   
   
   
-  <link rel="stylesheet" href="/css/main.900100e9dbee2d56c58fac8bb717037cae7e26a9c36c29d2ff587bdd65f0cbbe510b41d81a3bb234919cdfdc7550d786b2fab70c8fc507772d732fe097106d12.css" integrity="sha512-kAEA6dvuLVbFj6yLtxcDfK5&#43;JqnDbCnS/1h73WXwy75RC0HYGjuyNJGc39x1UNeGsvq3DI/FB3ctcy/glxBtEg==" />
+  <link rel="stylesheet" href="/css/main.89f1f43052eb76761ccb6b4a22b0ad83287cfdf92b5dbbf9a90c26fdcee4b3a1f2a22a2956d619e062777a543c4c63006e57f0984b4dcd0fd2d221326f93ac48.css" integrity="sha512-ifH0MFLrdnYcy2tKIrCtgyh8/fkrXbv5qQwm/c7ks6HyoiopVtYZ4GJ3elQ8TGMAblfwmEtNzQ/S0iEyb5OsSA==" />
   
 </head>
 <body a="auto">
@@ -28,6 +28,69 @@
 <h1>Books</h1>
 
 
+
+    <ul><li>
+            <span>2025-04-18</span>
+            <a href="/books/mindpower/">Mind Power Into 21st Century</a>
+        </li>
+        <li>
+            <span>2025-04-18</span>
+            <a href="/books/influence/">Influence: The Psychology of Persuasion</a>
+        </li>
+        <li>
+            <span>2025-04-13</span>
+            <a href="/books/miracle-mind-dynamics/">The Miracle Of Mind Dynamics</a>
+        </li>
+        <li>
+            <span>2025-04-03</span>
+            <a href="/books/true-and-false-magic/">True and False Magic</a>
+        </li>
+        <li>
+            <span>2025-03-31</span>
+            <a href="/books/captivate/">Captivate: The Science of Succeeding with People</a>
+        </li>
+        <li>
+            <span>2025-03-22</span>
+            <a href="/books/hoodwinked/">Hoodwinked</a>
+        </li>
+        <li>
+            <span>2025-03-12</span>
+            <a href="/books/presence/">Presence</a>
+        </li>
+        <li>
+            <span>2025-03-10</span>
+            <a href="/books/love-worth-making/">Love Worth Making</a>
+        </li>
+        <li>
+            <span>2025-03-04</span>
+            <a href="/books/why-men-love-bitches/">Why Men Love Bitches</a>
+        </li>
+        <li>
+            <span>2025-03-01</span>
+            <a href="/books/good-startegy-bad-strategy/">Good Startegy / Bad Strategy</a>
+        </li>
+        <li>
+            <span>2025-02-28</span>
+            <a href="/books/acotar/">A Court Of Thorns And Roses</a>
+        </li>
+        <li>
+            <span>2025-02-18</span>
+            <a href="/books/thinking-in-systems/">Thinking in Systems</a>
+        </li>
+        <li>
+            <span>2025-02-15</span>
+            <a href="/books/mindset/">Mindset</a>
+        </li>
+        <li>
+            <span>2025-02-07</span>
+            <a href="/books/integrity/">The Way of Integrity</a>
+        </li>
+        <li>
+            <span>2024-12-30</span>
+            <a href="/books/creative-act/">The Creative Act: A Way Of Being</a>
+        </li>
+        
+    </ul>
 
 
 
