--- a/microservice-patterns/index.html
+++ b/microservice-patterns/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-us"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=62434&amp;path=livereload" data-no-instant defer></script>
+<html lang="en-us"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=64289&amp;path=livereload" data-no-instant defer></script>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -32,11 +32,15 @@
 
     <ul><li>
             <span>2025-04-22</span>
-            <a href="/microservice-patterns/microservices/">🌸 Microservice Architecture</a>
+            <a href="/microservice-patterns/three-tier-architecture/">💓 3-Tier Architecture</a>
         </li>
         <li>
             <span>2025-04-22</span>
-            <a href="/microservice-patterns/hexagonal-architecture/">🎀 Hexagonal Architecture Style</a>
+            <a href="/microservice-patterns/microservices/">🌸 Microservices</a>
+        </li>
+        <li>
+            <span>2025-04-22</span>
+            <a href="/microservice-patterns/hexagonal-architecture/">🎀 Hexagonal Architecture</a>
         </li>
         
     </ul>
