--- a/microservice-patterns/index.html
+++ b/microservice-patterns/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-us"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=64289&amp;path=livereload" data-no-instant defer></script>
+<html lang="en-us"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=64635&amp;path=livereload" data-no-instant defer></script>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -31,6 +31,10 @@
 
 
     <ul><li>
+            <span>2025-04-22</span>
+            <a href="/microservice-patterns/layered-architecture/">🐰 Layered Architecture</a>
+        </li>
+        <li>
             <span>2025-04-22</span>
             <a href="/microservice-patterns/three-tier-architecture/">💓 3-Tier Architecture</a>
         </li>
