--- a/microservice-patterns/rest/index.html
+++ b/microservice-patterns/rest/index.html
@@ -3,7 +3,8 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-   <meta name="description" content="REST - REpresentational State Transfer🤫">  
+   <meta name="description" content="REST - REpresentational State Transfer🤫
+REST - IPC-механизм,">  
 
   <title>
     
@@ -37,6 +38,7 @@
     
 
     <p><em>REST - REpresentational State Transfer</em>🤫</p>
+<p>REST - IPC-механизм,</p>
 
 </article>
 
