added REST file + leetcode update

--- a/microservice-patterns/index.html
+++ b/microservice-patterns/index.html
@@ -32,6 +32,10 @@
 
     <ul><li>
             <span>2025-04-23</span>
+            <a href="/microservice-patterns/rest/">👛 REST</a>
+        </li>
+        <li>
+            <span>2025-04-23</span>
             <a href="/microservice-patterns/ipc/">🍥 IPC</a>
         </li>
         <li>
