--- a/microservice-patterns/monolith/index.html
+++ b/microservice-patterns/monolith/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
    <meta name="description" content="Монолитная архитектура предполагает такую структуру приложения, что оно представлено единственным deployable юнитом.
 Про хорошее
-Плюсы монолитой архитектуры многочисленны, но проявляются только при относительной простоте проекта.
+Плюсы монолитой архитектуры многочисленны, но проявляются только при относительной простоте проекта и маленьком размере команды.
 
 разработчикам удобно иметь один открытый проект в IDE, когда он сравнительно простой
 легко вносить радикальные изменения, пока проект не очень сложный
@@ -47,7 +47,7 @@
 
     <p>Монолитная архитектура предполагает такую структуру приложения, что оно представлено <strong>единственным deployable юнитом</strong>.</p>
 <h3 id="про-хорошее">Про хорошее</h3>
-<p>Плюсы монолитой архитектуры многочисленны, но проявляются <strong>только при относительной простоте проекта</strong>.</p>
+<p>Плюсы монолитой архитектуры многочисленны, но проявляются <strong>только при относительной простоте проекта и маленьком размере команды</strong>.</p>
 <ul>
 <li>разработчикам удобно иметь один открытый проект в IDE, когда он сравнительно простой</li>
 <li>легко вносить радикальные изменения, пока проект не очень сложный</li>
