added REST fun facts

--- a/microservice-patterns/rmm/index.html
+++ b/microservice-patterns/rmm/index.html
@@ -3,7 +3,16 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-   <meta name="description" content="REST Maturity Model (Richardson Maturity Model)">  
+   <meta name="description" content="REST Maturity Model (Richardson Maturity Model)
+Уровень 0
+На единственный эндпоинт приложения отправляем POST-запросы с указанием нужного действия и параметров.
+Уровень 1
+Добавляем к предыдущему уровню ресурсы. Вместо одного эндпоинта - разные URL соответствующие нужному ресурсу
+Уровень 2
+Добавляем HTTP-глаголы. (ура! теперь отправляется не только POST!) &#43; query параметры &#43; HTTP-статусы. Класс, теперь имеет смысл кеширование GET-запросов
+Уровень 3
+Основан на 👹HATEOAS👹 (Hypertext As The Engine Of Application State)
+Идея: GET-запрос ресурса содержит в ответе ссылки для возможных дальнейших действий с этим ресурсом. Клиент не должен строить URL сам — он следует по ссылкам.">  
 
   <title>
     
@@ -37,6 +46,21 @@
     
 
     <h3 id="rest-maturity-model-richardson-maturity-model">REST Maturity Model (Richardson Maturity Model)</h3>
+<h4 id="уровень-0">Уровень 0</h4>
+<p>На единственный эндпоинт приложения отправляем POST-запросы с указанием нужного действия и параметров.</p>
+<h4 id="уровень-1">Уровень 1</h4>
+<p>Добавляем к предыдущему уровню ресурсы. Вместо одного эндпоинта - разные URL соответствующие нужному ресурсу</p>
+<h4 id="уровень-2">Уровень 2</h4>
+<p>Добавляем HTTP-глаголы. <em>(ура! теперь отправляется не только POST!)</em> + query параметры + HTTP-статусы. Класс, теперь имеет смысл кеширование GET-запросов</p>
+<h4 id="уровень-3">Уровень 3</h4>
+<p>Основан на 👹<strong>HATEOAS</strong>👹 (Hypertext As The Engine Of Application State)</p>
+<p>Идея: GET-запрос ресурса содержит в ответе ссылки для возможных дальнейших действий с этим ресурсом. Клиент не должен строить URL сам — он следует по ссылкам.</p>
+<p>Приятно: не нужно хардкодить URL-ы в клиенсткий код + можно их seamlessly подменять</p>
+<hr>
+<p>Честно? Впервые вижу 3 уровень. На практике встречала максимум второй уровень.</p>
+<hr>
+<p>Из забавного: <a href="https://roy.gbiv.com/untangled/2008/rest-apis-must-be-hypertext-driven">Филдинг, автор термина REST, говорит</a>, что соответствие 3 уровню - обязательное условие для того, чтобы API считалось REST API.</p>
+<p>-&gt; В дебатах со злобными ботаниками использовать ок <em>REST</em> для 2 уровня и <em>REST (Fielding-compliant)</em> для 3 уровня.</p>
 
 </article>
 
