--- a/microservice-patterns/index.html
+++ b/microservice-patterns/index.html
@@ -31,6 +31,10 @@
 
 
     <ul><li>
+            <span>2025-04-24</span>
+            <a href="/microservice-patterns/rmm/">🍧 REST Maturity Model</a>
+        </li>
+        <li>
             <span>2025-04-23</span>
             <a href="/microservice-patterns/rest/">👛 REST</a>
         </li>
