--- a/books/art-of-community/index.html
+++ b/books/art-of-community/index.html
@@ -6,7 +6,18 @@
    <meta name="description" content="
 Author: Charles H. Vogl
 Year: 2025 (2nd edition)
-Language: 🇬🇧">  
+Language: 🇬🇧
+
+Сообщество - группа людей, заботящихся о благополучии друг друга.
+Принципы, придерживаясь которых, получится построить сообщество с максимальным плюс-вайбом:
+
+Принцип границ
+
+Участники сообщества должны точно знать, что отделяет коммьюнити от внешнего мира. Что их объединяет и отличает от аутсайдеров? В чем заключается общая цель? Это понимание должно быть у всех участников. Донесите этот смысл.
+
+Принцип инициации
+
+Инициация - процесс признания человека частью сообщества. Инициацией может стать какое угодно взаимодействие, главное, чтобы оно однозначно воспринималось как признание и принятие группой. Важно давать новым участникам явно понять, что их приняли.">  
 
   <title>
     
@@ -43,6 +54,38 @@ Language: 🇬🇧">
 <p>Author: Charles H. Vogl</p>
 <p>Year: 2025 (2nd edition)</p>
 <p>Language: 🇬🇧</p>
+<hr>
+<p><strong>Сообщество</strong> - группа людей, заботящихся о благополучии друг друга.</p>
+<h2 id="принципы-придерживаясь-которых-получится-построить-сообщество-с-максимальным-плюс-вайбом">Принципы, придерживаясь которых, получится построить сообщество с максимальным плюс-вайбом:</h2>
+<ul>
+<li><strong>Принцип границ</strong></li>
+</ul>
+<p>Участники сообщества должны точно знать, что отделяет коммьюнити от внешнего мира. Что их объединяет и отличает от аутсайдеров? В чем заключается общая цель? Это понимание должно быть у всех участников. Донесите этот смысл.</p>
+<ul>
+<li><strong>Принцип инициации</strong></li>
+</ul>
+<p>Инициация - процесс признания человека частью сообщества. Инициацией может стать какое угодно взаимодействие, главное, чтобы оно однозначно воспринималось как признание и принятие группой. Важно давать новым участникам явно понять, что их приняли.</p>
+<ul>
+<li><strong>Принцип ритуалов</strong></li>
+</ul>
+<p>Ритуал - любая практика, показывающая, что данное время или событие важно и значимо.
+Очень часто именно в них люди находят настоящие смыслы. Если в вашем сообществе есть ритуалы, most likely the members are already hooked и они будут расстраиваться, если вы эти ритуалы уберете.</p>
+<ul>
+<li><strong>Принцип храма</strong></li>
+</ul>
+<p>То самое место, где &ldquo;живет&rdquo; сообщество. Если изначально у коммьюнити такого места нет, то оно всегда органически появляется. Место и обстановка сильно влияет на воприятие участниками мероприятий сообщества.</p>
+<ul>
+<li><strong>Принцип историй</strong></li>
+</ul>
+<p>Сторителлинг - действительно мощный инструмент и истории работают лучше любых манифестов и деклараций.
+Истории, рассказываемые в сообществе, обозначают его ценности и объединяют участников. Обмен историями - круто, т.к. эмоционально связывает (и участников с сообществом, и участников между собой)</p>
+<ul>
+<li><strong>Принцип символов</strong></li>
+</ul>
+<p>Символы - вещи, представлющие важные для нас идеи. Сообществу хорошо иметь логотип/значок, мерч, знаковые образы. С их помощью участники могут подчеркивать свою принадлежность к коммьюнити. Кстати, к сиволам относятся и передаваемые из рук в руки значимые в сообществе предметы, и трофеи, и подарки.</p>
+<p>-<strong>Принцип внутренних кругов</strong></p>
+<p>Как мемберы могут расти через вовлеченность в жизнь сообщества? Вот этот самый рост - важная причина, почему люди выбирают оставаться в коммьюнити. Не стоит давить или ставить четкие временные рамки для всех участников - каждый должен иметь возможность двигаться в своем темпе - но траектория роста внутри группы должна быть понятна и прозрачна.</p>
+<hr>
 
 </article>
 
