--- a/books/art-of-community/index.html
+++ b/books/art-of-community/index.html
@@ -8,16 +8,15 @@ Author: Charles H. Vogl
 Year: 2025 (2nd edition)
 Language: 🇬🇧
 
+Почему я это читаю?
+Если меня на собеседовании спроcят, кем я хочу видеть себя через 5-10 лет, я отвечу что коммьюнити лидером.
+
 Сообщество - группа людей, заботящихся о благополучии друг друга.
 Принципы, придерживаясь которых, получится построить сообщество с максимальным плюс-вайбом:
 
 Принцип границ
 
-Участники сообщества должны точно знать, что отделяет коммьюнити от внешнего мира. Что их объединяет и отличает от аутсайдеров? В чем заключается общая цель? Это понимание должно быть у всех участников. Донесите этот смысл.
-
-Принцип инициации
-
-Инициация - процесс признания человека частью сообщества. Инициацией может стать какое угодно взаимодействие, главное, чтобы оно однозначно воспринималось как признание и принятие группой. Важно давать новым участникам явно понять, что их приняли.">  
+Участники сообщества должны точно знать, что отделяет коммьюнити от внешнего мира. Что их объединяет и отличает от аутсайдеров? В чем заключается общая цель? Это понимание должно быть у всех участников. Донесите этот смысл.">  
 
   <title>
     
@@ -54,6 +53,9 @@ Language: 🇬🇧
 <p>Author: Charles H. Vogl</p>
 <p>Year: 2025 (2nd edition)</p>
 <p>Language: 🇬🇧</p>
+<hr>
+<p>Почему я это читаю?</p>
+<p>Если меня на собеседовании спроcят, кем я хочу видеть себя через 5-10 лет, я отвечу что коммьюнити лидером.</p>
 <hr>
 <p><strong>Сообщество</strong> - группа людей, заботящихся о благополучии друг друга.</p>
 <h2 id="принципы-придерживаясь-которых-получится-построить-сообщество-с-максимальным-плюс-вайбом">Принципы, придерживаясь которых, получится построить сообщество с максимальным плюс-вайбом:</h2>
