updated leetcode table

--- a/books/index.html
+++ b/books/index.html
@@ -31,7 +31,7 @@
 
     <ul><li>
             <span>2025-04-29</span>
-            <a href="/books/odin-v-okeane/">Один в океане</a>
+            <a href="/books/odin-v-okeane/">Один в Океане: История Побега</a>
         </li>
         <li>
             <span>2025-04-26</span>
