added 2 new notes

--- a/microservice-patterns/index.html
+++ b/microservice-patterns/index.html
@@ -27,10 +27,18 @@
 
 <h1>Microservice Patterns</h1>
 
-<p>Digital gardening while reading <strong>Microservice Patterns</strong> book by Chris Richardson</p>
+<p>Digital gardening while exploring the world of microservices</p>
 
 
     <ul><li>
+            <span>2025-04-30</span>
+            <a href="/microservice-patterns/rest-vs-rpc/">🌷 REST vs RPC</a>
+        </li>
+        <li>
+            <span>2025-04-30</span>
+            <a href="/microservice-patterns/rpc-fundamentals/">🧚‍♀️ RPC Fundamentals</a>
+        </li>
+        <li>
             <span>2025-04-24</span>
             <a href="/microservice-patterns/rmm/">🍧 REST Maturity Model</a>
         </li>
