--- a/microservice-patterns/index.html
+++ b/microservice-patterns/index.html
@@ -32,6 +32,10 @@
 
     <ul><li>
             <span>2025-04-30</span>
+            <a href="/microservice-patterns/grpc/">🍭 gRPC</a>
+        </li>
+        <li>
+            <span>2025-04-30</span>
             <a href="/microservice-patterns/rest-vs-rpc/">🌷 REST vs RPC</a>
         </li>
         <li>
