added async messaging notes

--- a/microservice-patterns/index.html
+++ b/microservice-patterns/index.html
@@ -31,6 +31,10 @@
 
 
     <ul><li>
+            <span>2025-05-03</span>
+            <a href="/microservice-patterns/async-messaging/">🍒 Asynchronous Messaging</a>
+        </li>
+        <li>
             <span>2025-04-30</span>
             <a href="/microservice-patterns/grpc/">🍭 gRPC</a>
         </li>
