--- a/microservice-patterns/index.html
+++ b/microservice-patterns/index.html
@@ -32,7 +32,7 @@
 
     <ul><li>
             <span>2025-05-03</span>
-            <a href="/microservice-patterns/async-messaging/">🍒 Asynchronous Messaging</a>
+            <a href="/microservice-patterns/async-messaging/">🍒 Async Messaging</a>
         </li>
         <li>
             <span>2025-04-30</span>
