--- a/microservice-patterns/async-messaging-for-availability/index.html
+++ b/microservice-patterns/async-messaging-for-availability/index.html
@@ -3,13 +3,10 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-   <meta name="description" content="Availability (доступность) - это способность системы оставаться работоспособной и обрабатывать запросы пользователей в большинстве ситуаций.
+   <meta name="description" content="Availability (доступность) - процент времени, когда система работает и готова к использованию.
+Availability = (Время работы системы / Общее время) × 100%
 
-issue with REST and other request/response options
-Mathematically speaking, the availability of a system operation is the product of the availability of the services that are invoked by that operation.
-If you want to maximize availability, you must minimize the amount of synchronous communication.
-
-рест все равно остается синхронным с точки зрения пользователя, что бы мы не накрутили на стороне сервера. Получается, возвращать ответ надо как можно скорее. Как?">  
+Синхронное взаимодействие уменьшает availability системы. Почему? Если система делает синхронные вызовы к другим сервисам, её доступность становится зависимой от доступности этих сервисов, т.к. availability системной операции = произведение availability всех сервисов, вызванных данной операцией. Получается, чем больше обращений к внешним источникам и чем больше сторонних команд - тем больше шансов, что операция не будет произведена верным образом.">  
 
   <title>
     
@@ -42,16 +39,26 @@ If you want to maximize availability, you must minimize the amount of synchronou
 
     
 
-    <p>Availability (доступность) - это способность системы <em>оставаться работоспособной</em> и обрабатывать запросы пользователей в большинстве ситуаций.</p>
+    <p>Availability (доступность) - процент времени, когда система работает и готова к использованию.</p>
+<p>Availability = (Время работы системы / Общее время) × 100%</p>
 <hr>
-<p>issue with REST and other request/response options</p>
-<p>Mathematically speaking, the availability of a system operation is the product of the availability of the services that are invoked by that operation.</p>
-<p>If you want to maximize availability, you must minimize the amount of synchronous communication.</p>
+<p><strong>Синхронное взаимодействие уменьшает availability системы.</strong> Почему? Если система делает синхронные вызовы к другим сервисам, её доступность становится зависимой от доступности этих сервисов, т.к. availability системной операции = произведение availability всех сервисов, вызванных данной операцией. Получается, чем больше обращений к внешним источникам и чем больше сторонних команд - тем больше шансов, что операция не будет произведена верным образом.</p>
+<p>-&gt; Хотим больше availability - уменьшаем количество синхронных взаимодействий</p>
 <hr>
-<p>рест все равно остается синхронным с точки зрения пользователя, что бы мы не накрутили на стороне сервера. Получается, возвращать ответ надо как можно скорее. Как?</p>
+<p><strong>Как уменьшить количество синхронных запросов?</strong></p>
+<p><em>(REST-то все равно остается синхронным, сколько очередей и топиков мы бы не накрутили внутри системы)</em></p>
 <ol>
-<li>Репликация данных</li>
-<li>Отправка простого ответа с последующей асинхронной обработкой данных и обновлением состояния по мере возможности.</li>
+<li>
+<p>Отказаться от запросов данных у других сервисов и пользоваться <strong>репликами</strong>. Данные могут обновляться после обработки нужных событий в системе, это ок. Вариант класс, когда нужно только читать данные. А что делать, когда надо их редактировать/добавлять?</p>
+</li>
+<li>
+<p><strong>Сначала ответ клиенту - потом взаимодействие с сервисами.</strong> Сервер получает от клиента запрос, который требует межсервисного взаимодействия. Он возвращает минимальный возможный ответ без синхронных запросов к другим участникам системы (e.g. создаваемый клиентом объект в статусе PENDING) и отправляет в асинхронные очереди события для обработки другими сервисами. В свое время эти события обрабатываются и запрос завершается асинхронно уже после того, как клиент получил свой ответ.</p>
+<p>А как тогда клиент узнает, что операция завершена?</p>
+<ul>
+<li>Отправка сервером нотификаций</li>
+<li>Периодический перезапрос данных клиентом (polling)</li>
+</ul>
+</li>
 </ol>
 
 </article>
