--- a/microservice-patterns/index.html
+++ b/microservice-patterns/index.html
@@ -32,6 +32,10 @@
 
     <ul><li>
             <span>2025-05-03</span>
+            <a href="/microservice-patterns/async-messaging-for-availability/">🫧 Async Messaging for Availability</a>
+        </li>
+        <li>
+            <span>2025-05-03</span>
             <a href="/microservice-patterns/async-messaging/">🍒 Async Messaging</a>
         </li>
         <li>
