--- a/microservice-patterns/index.html
+++ b/microservice-patterns/index.html
@@ -31,6 +31,10 @@
 
 
     <ul><li>
+            <span>2025-05-05</span>
+            <a href="/microservice-patterns/circuit-breaker/">🩷 Circuit Breaker</a>
+        </li>
+        <li>
             <span>2025-05-03</span>
             <a href="/microservice-patterns/async-messaging-for-availability/">🫧 Async Messaging for Availability</a>
         </li>
