added ACID notes

--- a/microservice-patterns/index.html
+++ b/microservice-patterns/index.html
@@ -32,6 +32,10 @@
 
     <ul><li>
             <span>2025-05-05</span>
+            <a href="/microservice-patterns/acid/">🍰 ACID</a>
+        </li>
+        <li>
+            <span>2025-05-05</span>
             <a href="/microservice-patterns/circuit-breaker/">🩷 Circuit Breaker</a>
         </li>
         <li>
