--- a/microservice-patterns/index.html
+++ b/microservice-patterns/index.html
@@ -31,6 +31,10 @@
 
 
     <ul><li>
+            <span>2025-05-06</span>
+            <a href="/microservice-patterns/cap/">🦩 CAP Theorem</a>
+        </li>
+        <li>
             <span>2025-05-05</span>
             <a href="/microservice-patterns/acid/">🍰 ACID</a>
         </li>
