added transactions and 2PC notes

--- a/microservice-patterns/index.html
+++ b/microservice-patterns/index.html
@@ -32,6 +32,10 @@
 
     <ul><li>
             <span>2025-05-06</span>
+            <a href="/microservice-patterns/transactions/">🌺 Transactions</a>
+        </li>
+        <li>
+            <span>2025-05-06</span>
             <a href="/microservice-patterns/cap/">🦩 CAP Theorem</a>
         </li>
         <li>
