--- a/microservice-patterns/index.html
+++ b/microservice-patterns/index.html
@@ -32,6 +32,14 @@
 
     <ul><li>
             <span>2025-05-06</span>
+            <a href="/microservice-patterns/lack-of-isolation/">🌿 Saga. Lack of Isolation</a>
+        </li>
+        <li>
+            <span>2025-05-06</span>
+            <a href="/microservice-patterns/saga/">💌 Saga</a>
+        </li>
+        <li>
+            <span>2025-05-06</span>
             <a href="/microservice-patterns/transactions/">🌺 Transactions</a>
         </li>
         <li>
