--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div></div>
         <div></div></header>
 
-<ul><li><a href="/categories/books/">📚 reading</a></li><li><a href="/trackers/leetcode-100/">🎯 leetcoding</a></li><li><a href="/microservice-patterns/">💅🏻 микросервисы для блондинок</a></li></ul>
+<ul><li><a href="/books/">📚 reading</a></li><li><a href="/trackers/leetcode-100/">🎯 leetcoding</a></li><li><a href="/microservice-patterns/">💅🏻 микросервисы для блондинок</a></li><li><a href="/algorithms/">🛍 алгоритмы для блондинок</a></li></ul>
 
 
 
