--- a/algorithms/index.html
+++ b/algorithms/index.html
@@ -31,6 +31,10 @@
 
     <ul><li>
             <span>2025-05-13</span>
+            <a href="/algorithms/binary-search-on-answer/">🐏 Binary Search on Answer</a>
+        </li>
+        <li>
+            <span>2025-05-13</span>
             <a href="/algorithms/binary-search/">💞 Binary Search</a>
         </li>
         
