added saga notes

--- a/microservice-patterns/index.html
+++ b/microservice-patterns/index.html
@@ -31,6 +31,14 @@
 
 
     <ul><li>
+            <span>2025-05-14</span>
+            <a href="/microservice-patterns/orchestration/">🍡 Saga. Orchestration</a>
+        </li>
+        <li>
+            <span>2025-05-10</span>
+            <a href="/microservice-patterns/choreography/">🎧 Saga. Choreography</a>
+        </li>
+        <li>
             <span>2025-05-06</span>
             <a href="/microservice-patterns/lack-of-isolation/">🌿 Saga. Lack of Isolation</a>
         </li>
