--- a/microservice-patterns/saga/index.html
+++ b/microservice-patterns/saga/index.html
@@ -59,9 +59,13 @@
 <p>Продумать все компенсирующие транзакции - задача разработчика и она не выполняется автоматически с помощью какой-то одной аннотации. That&rsquo;s the trick.</p>
 <p>Логику координации саги можно реализовать с помощью двух разных паттернов:</p>
 <ul>
-<li>Хореография</li>
-<li>Оркестрация</li>
+<li><a href="../choreography">Хореография</a></li>
+<li><a href="../orchestration">Оркестрация</a></li>
 </ul>
+<hr>
+<p><strong>Зачем это надо?</strong></p>
+<p><a href="../transactions">2PC не соответствует современным требованиям к availability и fault tolerance</a></p>
+<hr>
 <h3 id="про-отсутствие-изоляции">Про отсутствие изоляции</h3>
 <p>Изоляция гарантирует, что во время выполнения транзакции параллельные транзакции не оказывают влияния на её результат. Вот этого как раз таки в сагах и нет. Совсем.</p>
 <p><a href="../lack-of-isolation">Однако есть способы, чтобы спасти ситуацию.</a></p>
