--- a/microservice-patterns/transactions/index.html
+++ b/microservice-patterns/transactions/index.html
@@ -72,7 +72,7 @@
 <li>не поддерживаются популярными брокерами (RabbitMQ, Kafka) -&gt; снова ограничение стека</li>
 <li>распределенные транзакции - форма синхронного <a href="../ipc">IPC</a>, а это <a href="../async-messaging-for-availability">уменьшает availability</a></li>
 </ul>
-<h2 id="--решение-используем-паттерн-saga">-&gt; Решение? &hellip;используем паттерн saga</h2>
+<h2 id="--решение-используем-паттерн-sagasaga">-&gt; Решение? &hellip;используем паттерн <a href="../saga">saga</a></h2>
 
 </article>
 
