--- a/microservice-patterns/api-gateway/index.html
+++ b/microservice-patterns/api-gateway/index.html
@@ -53,6 +53,7 @@ API gateway - отдельный сервис в системе, который 
 <p><strong>API gateway</strong> - отдельный сервис в системе, который связывает приложение с окружающим миром, так сказать точка входа. Он отвечает за <strong>routing запросов</strong>, <strong>API composition</strong>, трансляцию протоколов и другие функции (e.g. аутентификация, rate limiting).</p>
 <p>API gateway инкапсулирует внутреннюю архитектуру приложения, предоставляя клиентский интерфейс.</p>
 <p>Суть простая: любой запрос от внешнего клиента проходит через API gateway. Там он перенаправляется к нужным сервисам, полный ожидаемый ответ агрегируется и отправляется назад. Ок практика, если запрос от клиента - <a href="../rest">REST</a>, a gateway уже общается с сервисами с помощью других инструментов (e.g. <a href="../grpc">gRPC</a>)</p>
+<p><img src="../images/api-gateway.png" alt=""></p>
 <h3 id="про-edge-functions">Про edge functions</h3>
 <p>API gateway часто хендлит следующие функции (edge functions):</p>
 <ul>
@@ -85,11 +86,18 @@ API gateway - отдельный сервис в системе, который 
 </ul>
 <h3 id="--плюсы">-&gt; Плюсы</h3>
 <ul>
-<li>Упрощение клиентского кода – клиенту не нужно знать адреса всех сервисов.</li>
+<li>Инкапсуляция: внутреннее устройство системы скрыто от клиентов.</li>
+<li>Упрощение клиентского кода – клиенту не нужно знать адреса всех сервисов и заниматься API composition, отправляя кучу запросов</li>
 <li>Снижение нагрузки на сервисы – кеширование, rate limiting разгружают бэкенд.</li>
 <li>Мониторинг и аналитика – централизованный сбор метрик и логов.</li>
 <li>Безопасность - можно отлавливать вредоносные запросы на этапе gateway.</li>
 </ul>
+<h3 id="--минусы">-&gt; Минусы</h3>
+<ul>
+<li>Весь этот API gateway надо написать, а потом еще и поддерживать</li>
+<li>Может образоваться очередь из разрабов, которые хотят внести изменения в API gateway, чтобы функциональность их сервисов стала доступна для клиентов</li>
+</ul>
+<p><a href="../bff">&hellip;можно еще чекнуть, как дела у BFF</a></p>
 
 </article>
 
