--- a/microservice-patterns/api-gateway/index.html
+++ b/microservice-patterns/api-gateway/index.html
@@ -10,7 +10,8 @@
 Недостаточная инкапсуляция -&gt; неудобно поддерживать систему
 
 Решение - использовать паттерн API Gateway
-API gateway - отдельный сервис в системе, который связывает приложение с окружающим миром, так сказать точка входа. Он отвечает за routing запросов, API composition, трансляцию протоколов и другие функции (e.g. аутентификация, rate limiting).">  
+API gateway - отдельный сервис в системе, который связывает приложение с окружающим миром, так сказать точка входа.
+Он отвечает за:">  
 
   <title>
     
@@ -50,7 +51,14 @@ API gateway - отдельный сервис в системе, который 
 <li>Недостаточная инкапсуляция -&gt; неудобно поддерживать систему</li>
 </ul>
 <h3 id="решение---использовать-паттерн-api-gateway">Решение - использовать паттерн API Gateway</h3>
-<p><strong>API gateway</strong> - отдельный сервис в системе, который связывает приложение с окружающим миром, так сказать точка входа. Он отвечает за <strong>routing запросов</strong>, <strong>API composition</strong>, трансляцию протоколов и другие функции (e.g. аутентификация, rate limiting).</p>
+<p><strong>API gateway</strong> - отдельный сервис в системе, который связывает приложение с окружающим миром, так сказать точка входа.
+Он отвечает за:</p>
+<ul>
+<li>routing запросов,</li>
+<li>API composition,</li>
+<li>трансляцию протоколов,</li>
+<li>edge functions (e.g. аутентификация, rate limiting)</li>
+</ul>
 <p>API gateway инкапсулирует внутреннюю архитектуру приложения, предоставляя клиентский интерфейс.</p>
 <p>Суть простая: любой запрос от внешнего клиента проходит через API gateway. Там он перенаправляется к нужным сервисам, полный ожидаемый ответ агрегируется и отправляется назад. Ок практика, если запрос от клиента - <a href="../rest">REST</a>, a gateway уже общается с сервисами с помощью других инструментов (e.g. <a href="../grpc">gRPC</a>)</p>
 <p><img src="../images/api-gateway.png" alt=""></p>
@@ -84,6 +92,7 @@ API gateway - отдельный сервис в системе, который 
 </ul>
 </li>
 </ul>
+<hr>
 <h3 id="--плюсы">-&gt; Плюсы</h3>
 <ul>
 <li>Инкапсуляция: внутреннее устройство системы скрыто от клиентов.</li>
@@ -96,6 +105,14 @@ API gateway - отдельный сервис в системе, который 
 <ul>
 <li>Весь этот API gateway надо написать, а потом еще и поддерживать</li>
 <li>Может образоваться очередь из разрабов, которые хотят внести изменения в API gateway, чтобы функциональность их сервисов стала доступна для клиентов</li>
+</ul>
+<hr>
+<h3 id="как-сделать-api-gateway-счастливым">Как сделать API gateway счастливым</h3>
+<ul>
+<li>Ради производительности стоит присмотреться к asynchronous (nonblocking) I/O модели (та самая с event-loop-ом)</li>
+<li>Использование реактивного программирования приветствуется опять же для лучшей производительности</li>
+<li>Не пренебрегать балансировкой нагрузки (спрятать несколько инстансов API gateway за балансировщиком)</li>
+<li>Не забывать про <a href="../circuit-breaker">circuit breaker</a></li>
 </ul>
 <p><a href="../bff">&hellip;можно еще чекнуть, как дела у BFF</a></p>
 
