updated leetcode tracker

--- a/trackers/leetcode-100/index.html
+++ b/trackers/leetcode-100/index.html
@@ -3,7 +3,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-   <meta name="description" content="🎯 73/100
+   <meta name="description" content="🎯 75/100
 100 литкод задачек на весну 2025
 
   
@@ -97,8 +97,8 @@
           69
           367
           2300
-          .
-          .
+          2900
+          328
           .
           .
           .
@@ -164,7 +164,7 @@
 
     
 
-    <p>🎯 73/100</p>
+    <p>🎯 75/100</p>
 <p>100 литкод задачек на весну 2025</p>
 <table>
   <thead>
@@ -258,8 +258,8 @@
           <td style="text-align: center">69</td>
           <td style="text-align: center">367</td>
           <td style="text-align: center">2300</td>
-          <td style="text-align: center">.</td>
-          <td style="text-align: center">.</td>
+          <td style="text-align: center">2900</td>
+          <td style="text-align: center">328</td>
           <td style="text-align: center">.</td>
           <td style="text-align: center">.</td>
           <td style="text-align: center">.</td>
