--- a/microservice-patterns/rpc-fundamentals/index.html
+++ b/microservice-patterns/rpc-fundamentals/index.html
@@ -6,21 +6,7 @@
    <meta name="description" content="-&gt; Local / Remote Procedure Calls
 Local procedure call - вызов процедуры в одной и той же программе.
 Remote procedure call (RPC) - вызов процедуры по сети. Происзодит имитация локального вызова
-
--&gt; RPC Framework essentials
-Каждый RPC фреймворк должен предоставлять:
-
-способ декларации доступных интерфейсов (какие процедуры можно вызвать remotely?) (e.g. через interface в Java или .proto в gRPC)
-способ определения типов параметров и возвращаемых значений (что ожидаем на входе и на выходе?) (e.g. Protobuf, JSON Schema)
-протокол для взаимодействия участников (по каким правилам общаются отправитель запроса и выполнитель процедуры?) (e.g. HTTP/2 в gRPC)
-Client stubs (codegen helper-ы, отвечающие за коммуникацию по сети, маршалинг-анмаршалинг и обработку ошибок). Генерируются или на этапе компиляции или динамически в рантайме
-Server stubs (Skeletons) принимает запрос, вызывает реальный метод, возвращает результат.
-RPC runtime, который менеджерит client stubs. По сути сервер, ожидающий запросов
-(?) возможно service discovery //TODO
-
-
--&gt; Marshaling / Unmarshaling
-Marshaling - запаковка">  
+Также RPC - это протокол, позволяющий программе на одном компьютере вызвать функцию на другом компьютере так, будто эта функция находится на первом компьютере. Это упрощает взаимодействие между программами, распределенными по разным системам, и скрывает сложность сетевого взаимодействия. (определение взято из интернета)">  
 
   <title>
     
@@ -56,6 +42,7 @@ Marshaling - запаковка">
     <h4 id="--local--remote-procedure-calls">-&gt; Local / Remote Procedure Calls</h4>
 <p><em>Local procedure call</em> - вызов процедуры в одной и той же программе.</p>
 <p><em>Remote procedure call (RPC)</em> - вызов процедуры по сети. Происзодит имитация локального вызова</p>
+<p>Также <strong>RPC - это протокол</strong>, позволяющий программе на одном компьютере вызвать функцию на другом компьютере так, будто эта функция находится на первом компьютере. Это упрощает взаимодействие между программами, распределенными по разным системам, и скрывает сложность сетевого взаимодействия. <em>(определение взято из интернета)</em></p>
 <hr>
 <h4 id="--rpc-framework-essentials">-&gt; RPC Framework essentials</h4>
 <p>Каждый RPC фреймворк должен предоставлять:</p>
