--- a/books/index.html
+++ b/books/index.html
@@ -30,6 +30,10 @@
 
 
     <ul><li>
+            <span>2025-05-22</span>
+            <a href="/books/confidence-code/">The Confidence Code</a>
+        </li>
+        <li>
             <span>2025-05-19</span>
             <a href="/books/art-of-war/">Искусство Войны</a>
         </li>
