--- a/books/index.html
+++ b/books/index.html
@@ -30,6 +30,10 @@
 
 
     <ul><li>
+            <span>2025-06-03</span>
+            <a href="/books/four-hour-work-week/">The 4-Hour Workweek</a>
+        </li>
+        <li>
             <span>2025-05-22</span>
             <a href="/books/confidence-code/">The Confidence Code</a>
         </li>
