--- a/books/art-of-community/index.html
+++ b/books/art-of-community/index.html
@@ -29,7 +29,7 @@ Language: 🇬🇧
   
   
   
-  <link rel="stylesheet" href="/css/main.89f1f43052eb76761ccb6b4a22b0ad83287cfdf92b5dbbf9a90c26fdcee4b3a1f2a22a2956d619e062777a543c4c63006e57f0984b4dcd0fd2d221326f93ac48.css" integrity="sha512-ifH0MFLrdnYcy2tKIrCtgyh8/fkrXbv5qQwm/c7ks6HyoiopVtYZ4GJ3elQ8TGMAblfwmEtNzQ/S0iEyb5OsSA==" />
+  <link rel="stylesheet" href="/css/main.402d969eb985a71a6a1f5691d075f007e164ef5089bb348d7c30f7c743c0dd62f9531d7d51bb39ca18422302c73c7dbc5d5e16e51773af387311ead2edd002ec.css" integrity="sha512-QC2WnrmFpxpqH1aR0HXwB&#43;Fk71CJuzSNfDD3x0PA3WL5Ux19Ubs5yhhCIwLHPH28XV4W5RdzrzhzEerS7dAC7A==" />
   
 </head>
 <body a="auto">
