--- a/books/index.html
+++ b/books/index.html
@@ -30,6 +30,10 @@
 
 
     <ul><li>
+            <span>2025-06-19</span>
+            <a href="/books/90-days/">The First 90 Days</a>
+        </li>
+        <li>
             <span>2025-06-13</span>
             <a href="/books/code/">Code: The Hidden Language of Computer Hardware and Software</a>
         </li>
