--- a/microservice-patterns/api-gateway/index.html
+++ b/microservice-patterns/api-gateway/index.html
@@ -72,7 +72,7 @@ API gateway - отдельный сервис в системе, который 
 <p>Авторизация</p>
 </li>
 <li>
-<p>Rate limiting (ограничение частоты запросов)</p>
+<p><a href="../../system-design/rate-limiting-strategies">Rate limiting</a></p>
 </li>
 <li>
 <p>Кеширование</p>
