--- a/microservice-patterns/circuit-breaker/index.html
+++ b/microservice-patterns/circuit-breaker/index.html
@@ -59,7 +59,7 @@ maintenance time off
 <p>Следить за следующими вещами:</p>
 <ul>
 <li>везде должны быть выставлены таймауты (чтобы никакой запрос не висел вечно и не жрал ресурсы)</li>
-<li>(Rate Limiting) - ограничение количества запросов от клиента к серверу (если это количество превышено, можно автоматически фейлить новые запросы)</li>
+<li><a href="../../system-design/rate-limiting-strategies">Rate limiting</a> - ограничение количества запросов от клиента к серверу (если это количество превышено, можно автоматически фейлить новые запросы)</li>
 <li>применение сircuit breaker паттерна</li>
 </ul>
 </li>
