--- a/system-design/index.html
+++ b/system-design/index.html
@@ -31,6 +31,26 @@
 
 
     <ul><li>
+            <span>2025-06-20</span>
+            <a href="/system-design/hash-tree/">🌳 Merkle (Hash) Tree</a>
+        </li>
+        <li>
+            <span>2025-06-20</span>
+            <a href="/system-design/gossip-protocol/">📗 Gossip Protocol</a>
+        </li>
+        <li>
+            <span>2025-06-20</span>
+            <a href="/system-design/vector-clock/">🔮 Vector Clock</a>
+        </li>
+        <li>
+            <span>2025-06-20</span>
+            <a href="/system-design/consistency-models/">🐾 Consistency Models</a>
+        </li>
+        <li>
+            <span>2025-06-20</span>
+            <a href="/system-design/quorum-consensus/">🌼 Quorum Consensus</a>
+        </li>
+        <li>
             <span>2025-06-18</span>
             <a href="/system-design/rate-limiting-strategies/">🖇 Rate Limiting Strategies</a>
         </li>
