--- a/books/art-of-community/index.html
+++ b/books/art-of-community/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-us"><head>
+<html lang="en-us"><head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -29,7 +29,7 @@ Language: 🇬🇧
   
   
   
-  <link rel="stylesheet" href="/css/main.c7dc020aa44e23fb3840f1d5d077f9c21d856037974668af0f28959e9580274e82ca115c67d57f325c210f4f3e09cc0543e57a123871841aa4a952799f51c0e2.css" integrity="sha512-x9wCCqROI/s4QPHV0Hf5wh2FYDeXRmivDyiVnpWAJ06CyhFcZ9V/MlwhD08&#43;CcwFQ&#43;V6EjhxhBqkqVJ5n1HA4g==" />
+  <link rel="stylesheet" href="/css/main.402d969eb985a71a6a1f5691d075f007e164ef5089bb348d7c30f7c743c0dd62f9531d7d51bb39ca18422302c73c7dbc5d5e16e51773af387311ead2edd002ec.css" integrity="sha512-QC2WnrmFpxpqH1aR0HXwB&#43;Fk71CJuzSNfDD3x0PA3WL5Ux19Ubs5yhhCIwLHPH28XV4W5RdzrzhzEerS7dAC7A==" />
   
 </head>
 <body a="auto">
