--- a/books/index.html
+++ b/books/index.html
@@ -31,7 +31,7 @@
 
     <ul><li>
             <span>2025-07-29</span>
-            <a href="/books/meditations/">Meditations</a>
+            <a href="/books/meditations/">Наедине с собой</a>
         </li>
         <li>
             <span>2025-07-22</span>
