--- a/books/index.html
+++ b/books/index.html
@@ -30,6 +30,10 @@
 
 
     <ul><li>
+            <span>2025-08-10</span>
+            <a href="/books/the-name-of-the-rose/">Имя розы</a>
+        </li>
+        <li>
             <span>2025-07-29</span>
             <a href="/books/meditations/">Наедине с собой</a>
         </li>
