--- a/books/index.html
+++ b/books/index.html
@@ -30,6 +30,18 @@
 
 
     <ul><li>
+            <span>2025-09-30</span>
+            <a href="/books/microservices-patterns/">Microservice Patterns</a>
+        </li>
+        <li>
+            <span>2025-09-24</span>
+            <a href="/books/slouching-towards-bethlehem/">Slouching Towards Bethlehem</a>
+        </li>
+        <li>
+            <span>2025-08-31</span>
+            <a href="/books/the-house-of-the-dead/">Записки из мертвого дома</a>
+        </li>
+        <li>
             <span>2025-08-10</span>
             <a href="/books/the-name-of-the-rose/">Имя розы</a>
         </li>
